--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ name = "pypi"
 django = "~=3.1.0"
 djangorestframework = "~=3.11.0"
 drf-yasg = "==1.17.1"
-pillow = "*"
+pillow = "~=8.3.0"
+black = "==21.8b0"
 
 [dev-packages]
 
